landing page fixed white box stuff and some alignment

--- a/var/www/csc342/LandingPage.html
+++ b/var/www/csc342/LandingPage.html
@@ -110,25 +110,25 @@ var wphcAjax = {"ajaxurl":"http:\/\/raleighpublicrecord.org\/wp-admin\/admin-aja
  <!-- <script type='text/javascript' src='template.js'></script>  RIGHT NOW NO JS INVOLVED-->
 			
 			
-			</head>
+</head>
 
 <body class="single single-post postid-20350 single-format-standard">
 		
 		<p>Our reporters have spent months interviewing candidates and dissecting issues to bring you the most comprehensive guide to voting in Raleigh. We have analysis on the transportation and schools bonds, legislative changes to elections, and we profiled almost every candidate running for Raleigh City Council and the Wake County Board of Education. </p>
-		<table>
-		
-<!--Here is the table for the artilcles and the candidate button -->
-<tbody id="table" class="table">
+<table>
+               
+<!-Here is the table for the artilcles and the candidate button ->
+<tbody>
 <tr>
 <td width="300">
 <ol>
-    <a href="http://raleighpublicrecord.org/?p=20315"><li> Changes Coming to NC Voting Law, but Not This Year<br />By Laura Baverman</li></a>
+   <a href="http://raleighpublicrecord.org/?p=20315"><li> Changes Coming to NC Voting Law, but Not This Year<br />By Laura Baverman</li></a>
 
-  <div id = "specific" class="specific> Two Bonds on the Ballot this Year
-       <a href="http://raleighpublicrecord.org/?p=20311"><li>Raleigh's 2013 Transportation Bond Explained<br />By Ariella Monti</li></a>
-       <a href="http://raleighpublicrecord.org/?p=20308"><li>Bond Pits New Schools Against Higher County Debt, Taxes<br />By Monica Chen</li></a>
-   </div></div>
-   <a href="http://raleighpublicrecord.org/?p=20282"><li>School Board Will Have New Districts for 2016<br />By Monica Chen</li></a>
+ <div id = "specific" class="specific"> Two Bonds on the Ballot this Year
+      <a href="http://raleighpublicrecord.org/?p=20311"><li>Raleigh's 2013 Transportation Bond Explained<br />By Ariella Monti</li></a>
+      <a href="http://raleighpublicrecord.org/?p=20308"><li>Bond Pits New Schools Against Higher County Debt, Taxes<br />By Monica Chen</li></a>
+  </div></div>
+  <a href="http://raleighpublicrecord.org/?p=20282"><li>School Board Will Have New Districts for 2016<br />By Monica Chen</li></a>
 </td>
 <td width="300"><strong>
 <ol>
@@ -138,8 +138,13 @@ var wphcAjax = {"ajaxurl":"http:\/\/raleighpublicrecord.org\/wp-admin\/admin-aja
 <a href="http://raleighpublicrecord.org/?p=20339"><li>A Voting How-to<br />By Jackie Kantor </li></a>
 </td>
 </tr>
+<tr>
+ 
+ <td> <a href="CandidateList.html" class="button" id="button">Candidate List</a> </td>
+ 
+</tr>
 </tbody>
 </table>
-<a href="CandidateList.html" class="button" id="button">Candidate List</a>
+
 </body>
 </html>
