--- a/var/www/csc342/demo_wraper.html
+++ b/var/www/csc342/demo_wraper.html
@@ -227,7 +227,7 @@ var wphcAjax = {"ajaxurl":"http:\/\/raleighpublicrecord.org\/wp-admin\/admin-aja
 <div id="content" class="span8" role="main">
 	
 <article id="post-21357" class="post-21357 post type-post status-publish format-standard hentry category-2014-primary-election category-2014-primary-election-guide category-news tag-election-guide hnews item" itemscope itemtype="http://schema.org/Article">
-<iframe src="LandingPage.html" width="100%" height="1300px"></iframe>
+<iframe src="LandingPage.html" width="100%" height="1300px" frameborder="0"></iframe>
 	</article><!-- #post-21357 -->
 
 
